--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -30,7 +30,7 @@ body {
   color: var(--color-darkblue);
 
   &--secondary {
-    font-family: 'Merriweather Light', serif;
+    font-family: 'Merriweather', serif;
     font-weight: 300;
     font-size: 2.4rem;
     color: var(--color-fullblack);
